--- a/config.yml
+++ b/config.yml
@@ -3,23 +3,17 @@ languageCode: ja
 defaultContentLanguage: ja
 hasCJKLanguage: true
 title: katsuのブログ
+# paginate: 5 #> 古い形式
 pagination:
   pagerSize: 5
 theme: PaperMod
 
-services:
-  googleAnalytics:
-    ID: UA-123-45
-
-# copyright: '&copy; katsu · [Privacy Policy]({{< ref "privacy" >}})'
-
 enableRobotsTXT: true
-buildDrafts: false # Include drafts when building.
-buildFuture: false # Include content with a future publication date.
-buildExpired: false # Include content already expired.
+buildDrafts: false
+buildFuture: false
+buildExpired: false
 
-capitalizeListTitles: true 
-titleCaseStyle: ap # ap, chicago, go, firstupper, or none.
+googleAnalytics: UA-123-45
 
 minify:
   disableXML: true
@@ -27,8 +21,8 @@ minify:
 
 params:
   env: production # to enable google analytics, opengraph, twitter-cards and schema.
-  # subtitle: This is subtitle
-  # description: katsuのブログです。
+  subtitle: This is subtitle
+  description: katsuのブログです。
   keywords: [Blog, R, SQL]
   author: katsu # author: ["Me", "You"] #< multiple authors
     # images: ["<link or path of image for opengraph, twitter-cards>"]
