--- a/hugo.yaml
+++ b/hugo.yaml
@@ -3,17 +3,26 @@ languageCode: ja
 defaultContentLanguage: ja
 hasCJKLanguage: true
 title: katsuのブログ
-# paginate: 5 #> 古い形式
 pagination:
   pagerSize: 5
 theme: PaperMod
 
-enableRobotsTXT: true
-buildDrafts: false
-buildFuture: false
-buildExpired: false
+services:
+  googleAnalytics:
+    ID: UA-123-45
 
-googleAnalytics: UA-123-45
+# copyright: '&copy; katsu · [Privacy Policy]({{< ref "privacy" >}})'
+
+enableRobotsTXT: true
+
+# buildDrafts: false # Include drafts when building.
+buildDrafts: true # Include drafts when building.
+
+buildFuture: false # Include content with a future publication date.
+buildExpired: false # Include content already expired.
+
+capitalizeListTitles: true 
+titleCaseStyle: ap # ap, chicago, go, firstupper, or none.
 
 minify:
   disableXML: true
@@ -21,8 +30,8 @@ minify:
 
 params:
   env: production # to enable google analytics, opengraph, twitter-cards and schema.
-  subtitle: This is subtitle
-  description: katsuのブログです。
+  # subtitle: This is subtitle
+  # description: katsuのブログです。
   keywords: [Blog, R, SQL]
   author: katsu # author: ["Me", "You"] #< multiple authors
     # images: ["<link or path of image for opengraph, twitter-cards>"]
