--- a/hugo.yaml
+++ b/hugo.yaml
@@ -15,8 +15,8 @@ services:
 
 enableRobotsTXT: true
 
-# buildDrafts: false # Include drafts when building.
-buildDrafts: true # Include drafts when building.
+buildDrafts: false # Include drafts when building.
+# buildDrafts: true # Include drafts when building.
 
 buildFuture: false # Include content with a future publication date.
 buildExpired: false # Include content already expired.
