--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -178,9 +178,13 @@ params:
       データ分析やプログラミングの楽しさを共有することをモットーに、日々成長中✨  
       {{% /comment %}} 
       
-      ブログでは『📘 データサイエンス100本ノック（構造化データ加工編）』をベースにした問題解説やオリジナル問題を発信中✨ RとSQLを中心に、初心者から上級者まで楽しめるコンテンツをお届けします🚀  
-
-      Rコード実行環境のセットアップ・プログラムは [📂GitHubリポジトリ](https://github.com/14katsumix/100knocks-dp)に公開してます。
+      ブログでは R と SQL を中心に、『📘 データサイエンス100本ノック（構造化データ加工編）』をベースにした問題解説やオリジナル問題を発信中✨ 
+      
+      {{% comment %}} 
+      RとSQLを中心に、初心者から上級者まで楽しめるコンテンツをお届けします🚀  
+      {{% /comment %}} 
+      
+      Rコード実行環境のセットアップ・プログラムを [📂GitHubリポジトリ](https://github.com/14katsumix/100knocks-dp)に公開してます。
 
   socialIcons:
     - name: x
