--- a/config/production/hugo.yaml
+++ b/config/production/hugo.yaml
@@ -68,16 +68,16 @@ menus:
       url: ds-100knocks-dp
       weight: 30
       identifier: "DS-100knocks"
-    - name: standard
-      url: "ds-100knocks-dp/standard"
-      parent: "DS-100knocks"
-      weight: 1
-      identifier: standard
-    - name: advanced
-      url: "ds-100knocks-dp/advanced"
-      parent: "DS-100knocks"
-      weight: 2
-      identifier: advanced
+    # - name: standard
+    #   url: "ds-100knocks-dp/standard"
+    #   parent: "DS-100knocks"
+    #   weight: 1
+    #   identifier: standard
+    # - name: advanced
+    #   url: "ds-100knocks-dp/advanced"
+    #   parent: "DS-100knocks"
+    #   weight: 2
+    #   identifier: advanced
     # - name: Glossary
     #   url: glossary
     #   weight: 30
