--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -256,19 +256,19 @@ menus:
       url: ds-100knocks-dp-test
       weight: 30
       identifier: "DS-100knocks"
-    - name: standard
-      url: "ds-100knocks-dp-test/standard"
-      parent: "DS-100knocks"
-      weight: 1
-      identifier: standard
-    - name: advanced
-      url: "ds-100knocks-dp-test/advanced"
-      parent: "DS-100knocks"
-      weight: 2
-      identifier: advanced
     - name: Glossary
       url: glossary
-      weight: 30
+      weight: 35
+    # - name: standard
+    #   url: "ds-100knocks-dp-test/standard"
+    #   parent: "DS-100knocks"
+    #   weight: 1
+    #   identifier: standard
+    # - name: advanced
+    #   url: "ds-100knocks-dp-test/advanced"
+    #   parent: "DS-100knocks"
+    #   weight: 2
+    #   identifier: advanced
 
 # menus:
 #   main:
