--- a/config/production/hugo.yaml
+++ b/config/production/hugo.yaml
@@ -53,19 +53,19 @@ params:
 menus:
   main:
     - name: Archive
-      url: archives
+      url: /archives/
       weight: 10
     - name: Search
-      url: search
+      url: /search/
       weight: 15
     - name: Tags
-      url: tags
+      url: /tags/
       weight: 20
     - name: Categories
-      url: categories
+      url: /categories/
       weight: 25
     - name: "データサイエンス100本ノック＋α"
-      url: ds-100knocks-dp
+      url: /ds-100knocks-dp/
       weight: 30
       identifier: "DS-100knocks"
     # - name: standard
