--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -126,7 +126,7 @@ params:
   ShowToc: true
   ShowPageNums: true
   TocOpen: false
-  images: ["images/twitter_card.png"] # Twitter Card (/static)
+  images: ["images/twitter-card.png"] # Twitter Card (/static)
   mainMenu:
     enableChildren: true
   site_title: 'データサイエンス100本ノック＋α'
