--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -2,3 +2,5 @@ site_100knocks: 'データサイエンス100本ノック＋α'
 site_rsql: '【R+SQL】'
 site_suffix_s: '標準編'
 site_suffix_a: '発展編'
+site_category_s: 'DS-100本ノック＋α（標準編）'
+site_category_a: 'DS-100本ノック＋α（発展編）'
