--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -4,3 +4,42 @@ site_suffix_s: '標準編'
 site_suffix_a: '発展編'
 site_category_s: 'DS-100本ノック＋α（標準編）'
 site_category_a: 'DS-100本ノック＋α（発展編）'
+
+keywords: 
+    - "データサイエンス100本ノック"
+    - "データサイエンスブログ"
+    - "データ分析"
+    - "データ解析"
+    - "データ分析実践"
+    - "データサイエンス基礎"
+    - "データサイエンスノウハウ"
+    - "データサイエンスTips"
+    - "データサイエンス手法"
+    - "プログラミング"
+    - "R言語"
+    - "Rプログラミング"
+    - "SQLクエリ"
+    - "SQLデータベース操作"
+    - "データベースバックエンド"
+    - "Rデータ処理"
+    - "SQLデータ処理"
+    - "高度なデータ処理"
+    - "データサイエンス無料教材"
+    - "データサイエンス解説"
+    - "データサイエンス設問解答"
+    - "データサイエンス発展問題"
+    - "初心者向けデータサイエンス"
+    - "中級者向けデータサイエンス"
+    - "上級者向けデータサイエンス"
+    - "日本語データサイエンス"
+    - "tidyverse"
+    - "dplyr"
+    - "tidyr"
+    - "dbplyr"
+    - "DBI"
+    - "dbx"
+    - "duckdb"
+    - "magrittr"
+    - "tibble"
+    - "Data Science Blog"
+    - "SQL Processing"
