--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -1,4 +1,5 @@
-baseURL: "https://14katsumix.github.io/tech-blog/"
+# baseURL: "https://14katsumix.github.io/tech-blog/"
+baseURL: "https://14katsumix.github.io/"
 title: katsuのブログ
 # copyright: '&copy; katsu · [Privacy Policy]({{< ref "privacy" >}})'
 pagination:
