--- a/config/production/hugo.yaml
+++ b/config/production/hugo.yaml
@@ -1,5 +1,4 @@
-# baseURL: "https://14katsumix.github.io/tech-blog/"
-baseURL: "https://14katsumix.github.io/"
+baseURL: "https://14katsumix.github.io/tech-blog/"
 
 # Include drafts when building.
 buildDrafts: false
