--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -1,4 +1,4 @@
-# baseURL: "https://14katsumix.github.io/"
+# baseURL: "https://14katsumix.com/
 baseURL: "https://14katsumix.github.io/tech-blog/"
 title: katsuのブログ
 # copyright: '&copy; katsu · [Privacy Policy]({{< ref "privacy" >}})'
